--- a/app/src/main/res/layout/activity_view_request.xml
+++ b/app/src/main/res/layout/activity_view_request.xml
@@ -22,273 +22,16 @@
         android:id="@+id/viewrequestIcon"
         android:layout_width="55dp"
         android:layout_height="55dp"
+        android:layout_marginTop="24dp"
         android:layout_marginBottom="6dp"
         android:contentDescription="@string/icon"
         app:layout_constraintBottom_toTopOf="@+id/tableLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.846"
+        app:layout_constraintHorizontal_bias="0.907"
         app:layout_constraintStart_toEndOf="@+id/headingText"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
         app:srcCompat="@drawable/viewrequest" />
-
-    <TableLayout
-        android:id="@+id/tableLayout"
-        android:layout_width="363dp"
-        android:layout_height="500dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headingText"
-        app:layout_constraintVertical_bias="0.049">
-
-
-
-        <TableRow
-            android:id="@+id/firstRow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
-
-            <TextView
-                android:padding="20dp"
-                android:text="@string/date"
-                android:textSize="16sp" />
-
-            <TextView
-                android:text="@string/message"
-                android:textSize="16sp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"
-                android:paddingRight="20dp"/>
-
-            <Button
-                android:id="@+id/acceptButton"
-                android:textSize="12sp"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
-                android:background="@color/yellow"
-                android:layout_marginLeft="7dp"
-                android:layout_marginStart="7dp"
-                android:text="@string/accept"
-                tools:ignore="DuplicateIds"/>
-
-            <Button
-                android:id="@+id/declineButton"
-                android:textSize="12sp"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
-                android:background="@color/yellow"
-                android:layout_marginLeft="5dp"
-                android:text="@string/decline"
-                android:layout_marginStart="5dp"
-                tools:ignore="DuplicateIds"/>
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/secRow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
-
-            <TextView
-                android:padding="20dp"
-                android:text="@string/date"
-                android:textSize="16sp" />
-
-            <TextView
-                android:text="@string/message"
-                android:textSize="16sp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"
-                android:paddingRight="20dp"/>
-            <Button
-                android:id="@+id/acceptButton"
-                android:textSize="12sp"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
-                android:background="@color/yellow"
-                android:layout_marginLeft="7dp"
-                android:layout_marginStart="7dp"
-                android:text="@string/accept"
-                tools:ignore="DuplicateIds" />
-
-            <Button
-                android:id="@+id/declineButton"
-                android:textSize="12sp"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
-                android:background="@color/yellow"
-                android:layout_marginLeft="5dp"
-                android:text="@string/decline"
-                android:layout_marginStart="5dp"
-                tools:ignore="DuplicateIds" />
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/thirdRow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
-
-            <TextView
-                android:padding="20dp"
-                android:text="@string/date"
-                android:textSize="16sp" />
-
-            <TextView
-                android:text="@string/message"
-                android:textSize="16sp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"
-                android:paddingRight="20dp"/>
-            <Button
-                android:id="@+id/acceptButton"
-                android:textSize="12sp"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
-                android:background="@color/yellow"
-                android:layout_marginLeft="7dp"
-                android:layout_marginStart="7dp"
-                android:text="@string/accept"
-                tools:ignore="DuplicateIds"/>
-
-            <Button
-                android:id="@+id/declineButton"
-                android:textSize="12sp"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
-                android:background="@color/yellow"
-                android:layout_marginLeft="5dp"
-                android:text="@string/decline"
-                android:layout_marginStart="5dp"
-                tools:ignore="DuplicateIds"/>
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/fourthRow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
-
-            <TextView
-                android:padding="20dp"
-                android:text="@string/date"
-                android:textSize="16sp" />
-
-            <TextView
-                android:text="@string/message"
-                android:textSize="16sp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"
-                android:paddingRight="20dp"/>
-            <Button
-                android:id="@+id/acceptButton"
-                android:textSize="12sp"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
-                android:background="@color/yellow"
-                android:layout_marginLeft="7dp"
-                android:layout_marginStart="7dp"
-                android:text="@string/accept"
-                tools:ignore="DuplicateIds"/>
-
-            <Button
-                android:id="@+id/declineButton"
-                android:textSize="12sp"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
-                android:background="@color/yellow"
-                android:layout_marginLeft="5dp"
-                android:text="@string/decline"
-                android:layout_marginStart="5dp"
-                tools:ignore="DuplicateIds"/>
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/fifthRow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
-
-            <TextView
-                android:padding="20dp"
-                android:text="@string/date"
-                android:textSize="16sp" />
-
-            <TextView
-                android:text="@string/message"
-                android:textSize="16sp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"
-                android:paddingRight="20dp"/>
-            <Button
-                android:id="@+id/acceptButton"
-                android:textSize="12sp"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
-                android:background="@color/yellow"
-                android:layout_marginLeft="7dp"
-                android:layout_marginStart="7dp"
-                android:text="@string/accept"
-                tools:ignore="DuplicateIds"/>
-
-            <Button
-                android:id="@+id/declineButton"
-                android:textSize="12sp"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
-                android:background="@color/yellow"
-                android:layout_marginLeft="5dp"
-                android:text="@string/decline"
-                android:layout_marginStart="5dp"
-                tools:ignore="DuplicateIds"/>
-        </TableRow>
-
-        <TableRow
-            android:id="@+id/sixthRow"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="10dp">
-
-            <TextView
-                android:padding="20dp"
-                android:text="@string/date"
-                android:textSize="16sp" />
-
-            <TextView
-                android:text="@string/message"
-                android:textSize="16sp"
-                android:paddingLeft="20dp"
-                android:paddingStart="20dp"
-                android:paddingRight="20dp"/>
-            <Button
-                android:id="@+id/acceptButton"
-                android:textSize="12sp"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
-                android:background="@color/yellow"
-                android:layout_marginLeft="7dp"
-                android:layout_marginStart="7dp"
-                android:text="@string/accept"
-                tools:ignore="DuplicateIds"/>
-
-            <Button
-                android:id="@+id/declineButton"
-                android:textSize="12sp"
-                android:layout_width="75dp"
-                android:layout_height="30dp"
-                android:background="@color/yellow"
-                android:layout_marginLeft="5dp"
-                android:text="@string/decline"
-                android:layout_marginStart="5dp"
-                tools:ignore="DuplicateIds"/>
-        </TableRow>
-
-
-
-
-    </TableLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
