--- a/app/src/main/res/layout/activity_switch_schedule.xml
+++ b/app/src/main/res/layout/activity_switch_schedule.xml
@@ -56,20 +56,22 @@
             android:paddingBottom="5dp">
 
             <Button
-                android:id="@+id/fromButton"
+                android:id="@+id/dateButton"
                 android:ems="5"
                 android:gravity="center_horizontal"
                 android:text="@string/day"
                 android:textAlignment="center"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                tools:ignore="DuplicateIds" />
 
             <Button
-                android:id="@+id/fromTime"
+                android:id="@+id/timeButton"
                 android:layout_width="241dp"
-                android:text="Select Time"
+                android:text="@string/select_time"
                 android:ems="5"
                 android:gravity="center_horizontal"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                tools:ignore="DuplicateIds" />
         </TableRow>
 
         <TableRow
@@ -96,20 +98,22 @@
             android:paddingBottom="5dp">
 
             <Button
-                android:id="@+id/toButton"
+                android:id="@+id/dateButton"
                 android:ems="5"
                 android:gravity="center_horizontal"
                 android:text="@string/day"
                 android:textAlignment="center"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                tools:ignore="DuplicateIds" />
 
             <Button
-                android:id="@+id/toTime"
-                android:text="Select Time"
+                android:id="@+id/timeButton"
+                android:text="@string/select_time"
                 android:layout_width="241dp"
                 android:ems="5"
                 android:gravity="center_horizontal"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                tools:ignore="DuplicateIds" />
         </TableRow>
 
     </TableLayout>
