--- a/app/src/main/res/layout/activity_daysoff_request.xml
+++ b/app/src/main/res/layout/activity_daysoff_request.xml
@@ -37,17 +37,17 @@
 
     <Button
         android:id="@+id/selectOffButton"
-        android:layout_width="151dp"
-        android:layout_height="37dp"
+        android:layout_width="158dp"
+        android:layout_height="47dp"
         android:layout_marginBottom="408dp"
-        android:background="@color/yellow"
+        android:background="@color/blue"
         android:text="@string/select_day_off"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/daysofftext"
-        app:layout_constraintVertical_bias="0.467"/>
+        app:layout_constraintVertical_bias="0.467" />
 
     <Button
         android:id="@+id/submitDaysOffButton"
