--- a/app/src/main/res/layout/activity_view_request.xml
+++ b/app/src/main/res/layout/activity_view_request.xml
@@ -6,32 +6,76 @@
     android:layout_height="match_parent"
     tools:context=".ViewRequest">
 
-    <TextView
-        android:id="@+id/headingText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="36dp"
-        android:text="@string/view_requests"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.102"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/viewrequestIcon"
-        android:layout_width="55dp"
-        android:layout_height="55dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="6dp"
-        android:contentDescription="@string/icon"
-        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.907"
-        app:layout_constraintStart_toEndOf="@+id/headingText"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/viewrequest" />
+    <!--Make a List View-->
+
+        <TextView
+            android:id="@+id/headingText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:text="@string/view_requests"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.102"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
+        <ImageView
+            android:id="@+id/viewrequestIcon"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="6dp"
+            android:contentDescription="@string/icon"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.849"
+            app:layout_constraintStart_toEndOf="@+id/headingText"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
+            app:srcCompat="@drawable/viewrequest" />
+
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:padding="20dp"-->
+<!--            android:text="@string/date"-->
+<!--            android:textSize="16sp"-->
+<!--            tools:layout_editor_absoluteX="26dp"-->
+<!--            tools:layout_editor_absoluteY="110dp" />-->
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:paddingStart="20dp"-->
+<!--            android:paddingLeft="20dp"-->
+<!--            android:paddingRight="20dp"-->
+<!--            android:text="@string/message"-->
+<!--            android:textSize="16sp"-->
+<!--            tools:layout_editor_absoluteX="108dp"-->
+<!--            tools:layout_editor_absoluteY="135dp" />-->
+
+<!--        <Button-->
+<!--            android:id="@+id/acceptButton"-->
+<!--            android:layout_width="75dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:background="@color/yellow"-->
+<!--            android:text="@string/accept"-->
+<!--            android:textSize="12sp"-->
+<!--            tools:ignore="DuplicateIds"-->
+<!--            tools:layout_editor_absoluteX="225dp"-->
+<!--            tools:layout_editor_absoluteY="126dp" />-->
+
+<!--        <Button-->
+<!--            android:id="@+id/declineButton"-->
+<!--            android:layout_width="75dp"-->
+<!--            android:layout_height="30dp"-->
+<!--            android:background="@color/yellow"-->
+<!--            android:text="@string/decline"-->
+<!--            android:textSize="12sp"-->
+<!--            tools:ignore="DuplicateIds"-->
+<!--            tools:layout_editor_absoluteX="310dp"-->
+<!--            tools:layout_editor_absoluteY="126dp" />-->
 </androidx.constraintlayout.widget.ConstraintLayout>
