--- a/app/src/main/res/layout/request_bar.xml
+++ b/app/src/main/res/layout/request_bar.xml
@@ -2,26 +2,27 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="100dp"
     android:padding="10dp"
+    android:descendantFocusability="blocksDescendants"
     >
 
         <TextView
+            android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/request"
             android:text="Date"
-            android:textSize="16dp"
+            android:textSize="16sp"
             android:layout_centerVertical="true"
             />
 
         <TextView
+            android:id="@+id/message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/message"
             android:text="Message"
-            android:textSize="16dp"
-            android:layout_toRightOf="@id/request"
+            android:textSize="16sp"
+            android:layout_toRightOf="@id/date"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             />
 
         <Button
@@ -31,20 +32,20 @@
             android:layout_height="30dp"
             android:background="@color/yellow"
             android:text="@string/accept"
-            android:layout_toLeftOf="@id/declineButton"
+            android:layout_toStartOf="@id/declineButton"
             android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
+            android:layout_marginEnd="20dp"
             />
 
         <Button
             android:id="@+id/declineButton"
-            android:textSize="12dp"
+            android:textSize="12sp"
             android:layout_width="75dp"
             android:layout_height="30dp"
             android:background="@color/yellow"
             android:text="@string/decline"
             android:layout_centerVertical="true"
-            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
             />
 
 
