--- a/app/src/main/res/layout/activity_manager_dashboard.xml
+++ b/app/src/main/res/layout/activity_manager_dashboard.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:id="@+id/dashLLayout"
         android:layout_width="match_parent"
-        android:layout_height="737dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -97,7 +97,6 @@
                     android:layout_height="wrap_content"
                     android:text="View Requests"
                     android:layout_marginTop="155dp"
-                    android:layout_marginLeft="55dp"
                     android:layout_marginStart="55dp" />
             </RelativeLayout>
 
