--- a/app/src/main/res/layout/activity_requests.xml
+++ b/app/src/main/res/layout/activity_requests.xml
@@ -8,7 +8,7 @@
     <LinearLayout
         android:id="@+id/dashLLayout"
         android:layout_width="match_parent"
-        android:layout_height="737dp"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent">
