--- a/app/src/main/res/layout/activity_view_request.xml
+++ b/app/src/main/res/layout/activity_view_request.xml
@@ -24,7 +24,7 @@
 
 
     <ImageView
-        android:id="@+id/viewrequestIcon"
+        android:id="@+id/icon"
         android:layout_width="55dp"
         android:layout_height="55dp"
         android:layout_marginTop="20dp"
@@ -45,7 +45,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/viewrequestIcon"
+        app:layout_constraintTop_toBottomOf="@+id/icon"
         app:layout_constraintVertical_bias="0.338">
 
 
