--- a/app/src/main/res/layout/activity_manager_dashboard.xml
+++ b/app/src/main/res/layout/activity_manager_dashboard.xml
@@ -124,6 +124,28 @@
                     android:textAlignment="center" />
             </RelativeLayout>
 
+            <RelativeLayout
+                android:layout_width="205dp"
+                android:layout_height="205dp">
+                <Button
+                    android:id="@+id/ScheduleCard"
+                    android:layout_width="108dp"
+                    android:layout_height="108dp"
+                    android:layout_margin="49dp"
+                    android:background="@drawable/autoschedule"
+                    android:contentDescription="@string/icon" >
+                </Button>
+
+                <TextView
+                    android:layout_width="110dp"
+                    android:layout_height="40dp"
+                    android:layout_marginStart="49dp"
+                    android:layout_marginLeft="49dp"
+                    android:layout_marginTop="155dp"
+                    android:text="Schedule"
+                    android:textAlignment="center" />
+            </RelativeLayout>
+
         </androidx.gridlayout.widget.GridLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
