--- a/app/src/main/res/layout/activity_view_breakdown.xml
+++ b/app/src/main/res/layout/activity_view_breakdown.xml
@@ -298,5 +298,6 @@
         app:layout_constraintEnd_toStartOf="@+id/textView4"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/headingText" />
+        app:layout_constraintTop_toBottomOf="@+id/headingText"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
