--- a/app/src/main/res/layout/activity_manager_login.xml
+++ b/app/src/main/res/layout/activity_manager_login.xml
@@ -93,4 +93,17 @@
         app:layout_constraintTop_toBottomOf="@+id/password"
         app:layout_constraintVertical_bias="0.062" />
 
+    <Button
+        android:id="@+id/resetPassword"
+        android:layout_width="200dp"
+        android:layout_height="30dp"
+        android:background="@color/yellow"
+        android:text="@string/forgotpass"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login"
+        app:layout_constraintVertical_bias="0.078" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
